RESOLVED FIXED145713
[WK2] Do not indicate Media Keys are present when they are not
https://bugs.webkit.org/show_bug.cgi?id=145713
Summary [WK2] Do not indicate Media Keys are present when they are not
Brent Fulgham
Reported 2015-06-05 14:16:47 PDT
The WK2 WebsiteDataStore::removeData method was missing some content. This fixes the omission.
Attachments
Patch (1.79 KB, patch)
2015-06-05 14:19 PDT, Brent Fulgham
no flags
Patch (3.42 KB, patch)
2015-06-10 12:10 PDT, Brent Fulgham
dino: review+
Brent Fulgham
Comment 1 2015-06-05 14:19:17 PDT
Brent Fulgham
Comment 2 2015-06-05 14:20:08 PDT
Brent Fulgham
Comment 3 2015-06-10 12:10:33 PDT
Brent Fulgham
Comment 4 2015-06-10 12:11:37 PDT
It looks like the underlying problem was that the folder holding the Media Keys was getting left behind if a ".DS_Store" file was present (e.g., if you navigated to the folder with the Finder). We should only report a Media Key exists if the actual file is present.
Dean Jackson
Comment 5 2015-06-10 13:46:50 PDT
Comment on attachment 254668 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=254668&action=review > Source/WebKit2/ChangeLog:10 > + media key file, not just a the directory. Sometimes the directory will exist typo: "just the"
Brent Fulgham
Comment 6 2015-06-10 13:47:46 PDT
Brent Fulgham
Comment 7 2015-06-10 13:47:57 PDT
(In reply to comment #5) > Comment on attachment 254668 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=254668&action=review > > > Source/WebKit2/ChangeLog:10 > > + media key file, not just a the directory. Sometimes the directory will exist > > typo: "just the" Grrr! Thank you for catching that.
Note You need to log in before you can comment on or make changes to this bug.