[WK2] Do not indicate Media Keys are present when they are not https://bugs.webkit.org/show_bug.cgi?id=145713 <rdar://problem/19752566>

Reviewed by Dean Jackson.

Correct the reporting of Media Key presence by checking for the actual
media key file, not just the directory. Sometimes the directory will exist
with no media key files (e.g., if a user navigates to the directory using
the Finder).

* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::computeMediaKeyFile): Moved earlier in file so it could be used by
the 'mediaKeyOrigins' method.
(WebKit::WebsiteDataStore::mediaKeyOrigins): Only indicate we have a media key
origin if the folder actually contains the media key file.
(WebKit::WebsiteDataStore::removeMediaKeys): Use the existing 'computeMediaKeyFile',
rather than manually building the file from strings.


Canonical link: https://commits.webkit.org/163898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185428 268f45cc-cd09-0410-ab3c-d52691b4dbfc